# Automatic-AI-News-Social-Media-Publisher

./: .env.example  .gitignore  NOTICE.md  README.md  pyproject.toml
data/: config.example.json
docs/: configuration.md  scoring.md  scrapers.md
src/: main.py  models.py  orchestrator.py  search.py
src/ai/: summarizer.py  tokens.py
src/scrapers/: github.py  openbb.py  ossinsight.py  telegram.py
src/services/: email.py  webhook.py  webhook_cli.py  xiaohongshu.py  xiaohongshu_cli.py
src/storage/: manager.py
tests/: test_email.py  test_webhook.py  test_xiaohongshu.py
