[project]
name = "ai-news-xhs-publisher"
version = "0.1.0"
description = "AI news aggregation and Xiaohongshu publishing workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "google-genai>=0.3.0",
    "pydantic>=2.9.0",
    "python-dateutil>=2.9.0",
    "rich>=13.9.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "ddgs>=7.0.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0",
]
openbb = [
    "openbb>=4.4.0",
    "openbb-benzinga>=1.6.0",
]

[project.scripts]
ainews-xhs = "src.main:main"
ainews-xhs-webhook = "src.services.webhook_cli:main"
ainews-xhs-publish = "src.services.xiaohongshu_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
